--- a/index.html
+++ b/index.html
@@ -47,9 +47,22 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Boipelo Mokakale</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a href="https://github.com/BoipeloMkk" target="_blank"
+            >Boipelo Mokakale</a
+          >
+          and is
+          <a
+            href="https://github.com/BoipeloMkk/Weather-app-challenge"
+            target="_blank"
+          >
+            on GitHub</a
+          >
+          and
+          <a
+            href="https://aesthetic-stroopwafel-cc03b7.netlify.app/"
+            target="_blank"
+            >hosted on Netlify</a
+          >
         </p>
       </footer>
     </div>
